# switchCaseWithQt

./: CMakeLists.txt  main.cpp
